# GLFont

./: CMakeLists.txt
cmake/: GLFontConfig.cmake.in
include/GLFont/: FTLabel.h  FontAtlas.h  GLConfig.h  GLFont.h  GLUtils.h
include/GLFont/shaders/: fontFragment.shader  fontVertex.shader
src/: FTLabel.cpp  FontAtlas.cpp  GLFont.cpp  GLUtils.cpp
test/: CMakeLists.txt
test/shaders/: fontFragment.shader  fontVertex.shader
test/src/: GLWindow.cpp  GLWindow.h  TestWindow.cpp
